src/JazLabs/hardware/digHolo/digHolo_v1.0.0/Examples/Matlab/digHolo.h

typedef float complex64;
typedef float complex64[2];
EXT_C complex64* digHoloProcessBatchFrequencySweepLinear(int handleIdx, int* batchCount, int* modeCount, int* polCount, float lambdaStart, float lambdaStop, int lambdaCount);
EXT_C complex64* digHoloProcessBatchWavelengthSweepArbitrary(int handleIdx, int* batchCount, int* modeCount, int* polCount, float* wavelengths, int lambdaCount);
EXT_C complex64* digHoloGetFields(int handleIdx, int* batchCount, int* polCount, float** x, float** y, int* width, int* height);
EXT_C int digHoloGetFields16(int handleIdx, int* batchCount, int* polCount, short** fieldR, short** fieldI, float** fieldScale, float** x, float** y, int* width, int* height);
EXT_C complex64* digHoloBasisGetFields(int handleIdx, int* batchCount, int* polCount, float** x, float** y, int* width, int* height);
EXT_C complex64* digHoloBasisGetCoefs(int handleIdx, int* batchCount, int* modeCount, int* polCount);
EXT_C int digHoloBatchGetSummary(int handleIdx, int planeIdx, int* parameterCount, int* totalCount, int* polCount, float** parameters, int* pixelCountX, int* pixelCountY, float** xAxis, float** yAxis, float** totalIntensity);
EXT_C int digHoloProcessFFT(int handleIdx);
EXT_C int digHoloProcessIFFT(int handleIdx);
EXT_C int digHoloProcessRemoveTilt(int handleIdx);
EXT_C int digHoloProcessBasisExtractCoefs(int handleIdx);
EXT_C complex64* digHoloGetFourierPlaneFull(int handleIdx, int* batchCount, int* polCount, int* width, int* height);
EXT_C complex64* digHoloGetFourierPlaneWindow(int handleIdx, int* batchCount, int* polCount, int* width, int* height);
EXT_C int digHoloConfigSetThreadCount(int handleIdx, int threadCount);
EXT_C int digHoloConfigGetThreadCount(int handleIdx);
EXT_C int  digHoloBenchmarkEstimateThreadCountOptimal(int handleIdx, float goalDuration);
EXT_C float digHoloBenchmark(int handleIdx, float goalDuration, float* info);
EXT_C int digHoloConfigSetFFTWPlanMode(int handleIdx, int planningMode);
EXT_C int digHoloConfigGetFFTWPlanMode(int handleIdx);
EXT_C int digHoloFFTWWisdomForget();
EXT_C int digHoloFFTWWisdomFilename(const char* filename);
EXT_C unsigned char* digHoloGetViewport(int handleIdx, int displayMode, int forceProcessing, int* width, int* height, char** windowString);
EXT_C int digHoloGetViewportToFile(int handleIdx, int displayMode, int forceProcessing, int* width, int* height, char** windowString, const char *filename);
EXT_C int digHoloConfigSetVerbosity(int handleIdx, int verbosity);
EXT_C int digHoloConfigGetVerbosity(int handleIdx);
EXT_C int digHoloConsoleRedirectToFile(char* filename);