src/JazLabs/hardware/digHolo/digHolo_v1.0.0/src/digholoHeader.py


# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1510
for _lib in _libs.values():
    if not _lib.has("digHoloProcessBatchFrequencySweepLinear", "cdecl"):
        continue
    digHoloProcessBatchFrequencySweepLinear = _lib.get("digHoloProcessBatchFrequencySweepLinear", "cdecl")
    digHoloProcessBatchFrequencySweepLinear.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int), c_float, c_float, c_int]
    digHoloProcessBatchFrequencySweepLinear.restype = POINTER(complex64)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1525
for _lib in _libs.values():
    if not _lib.has("digHoloProcessBatchWavelengthSweepArbitrary", "cdecl"):
        continue
    digHoloProcessBatchWavelengthSweepArbitrary = _lib.get("digHoloProcessBatchWavelengthSweepArbitrary", "cdecl")
    digHoloProcessBatchWavelengthSweepArbitrary.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_float), c_int]
    digHoloProcessBatchWavelengthSweepArbitrary.restype = POINTER(complex64)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1549
for _lib in _libs.values():
    if not _lib.has("digHoloGetFields", "cdecl"):
        continue
    digHoloGetFields = _lib.get("digHoloGetFields", "cdecl")
    digHoloGetFields.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(c_int), POINTER(c_int)]
    digHoloGetFields.restype = POINTER(complex64)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1568
for _lib in _libs.values():
    if not _lib.has("digHoloGetFields16", "cdecl"):
        continue
    digHoloGetFields16 = _lib.get("digHoloGetFields16", "cdecl")
    digHoloGetFields16.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_short)), POINTER(POINTER(c_short)), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(c_int), POINTER(c_int)]
    digHoloGetFields16.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1587
for _lib in _libs.values():
    if not _lib.has("digHoloBasisGetFields", "cdecl"):
        continue
    digHoloBasisGetFields = _lib.get("digHoloBasisGetFields", "cdecl")
    digHoloBasisGetFields.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(c_int), POINTER(c_int)]
    digHoloBasisGetFields.restype = POINTER(complex64)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1603
for _lib in _libs.values():
    if not _lib.has("digHoloBasisGetCoefs", "cdecl"):
        continue
    digHoloBasisGetCoefs = _lib.get("digHoloBasisGetCoefs", "cdecl")
    digHoloBasisGetCoefs.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int)]
    digHoloBasisGetCoefs.restype = POINTER(complex64)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1659
for _lib in _libs.values():
    if not _lib.has("digHoloBatchGetSummary", "cdecl"):
        continue
    digHoloBatchGetSummary = _lib.get("digHoloBatchGetSummary", "cdecl")
    digHoloBatchGetSummary.argtypes = [c_int, c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_float)), POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(POINTER(c_float))]
    digHoloBatchGetSummary.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1670
for _lib in _libs.values():
    if not _lib.has("digHoloProcessFFT", "cdecl"):
        continue
    digHoloProcessFFT = _lib.get("digHoloProcessFFT", "cdecl")
    digHoloProcessFFT.argtypes = [c_int]
    digHoloProcessFFT.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1682
for _lib in _libs.values():
    if not _lib.has("digHoloProcessIFFT", "cdecl"):
        continue
    digHoloProcessIFFT = _lib.get("digHoloProcessIFFT", "cdecl")
    digHoloProcessIFFT.argtypes = [c_int]
    digHoloProcessIFFT.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1694
for _lib in _libs.values():
    if not _lib.has("digHoloProcessRemoveTilt", "cdecl"):
        continue
    digHoloProcessRemoveTilt = _lib.get("digHoloProcessRemoveTilt", "cdecl")
    digHoloProcessRemoveTilt.argtypes = [c_int]
    digHoloProcessRemoveTilt.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1706
for _lib in _libs.values():
    if not _lib.has("digHoloProcessBasisExtractCoefs", "cdecl"):
        continue
    digHoloProcessBasisExtractCoefs = _lib.get("digHoloProcessBasisExtractCoefs", "cdecl")
    digHoloProcessBasisExtractCoefs.argtypes = [c_int]
    digHoloProcessBasisExtractCoefs.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1718
for _lib in _libs.values():
    if not _lib.has("digHoloGetFourierPlaneFull", "cdecl"):
        continue
    digHoloGetFourierPlaneFull = _lib.get("digHoloGetFourierPlaneFull", "cdecl")
    digHoloGetFourierPlaneFull.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]
    digHoloGetFourierPlaneFull.restype = POINTER(complex64)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1732
for _lib in _libs.values():
    if not _lib.has("digHoloGetFourierPlaneWindow", "cdecl"):
        continue
    digHoloGetFourierPlaneWindow = _lib.get("digHoloGetFourierPlaneWindow", "cdecl")
    digHoloGetFourierPlaneWindow.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]
    digHoloGetFourierPlaneWindow.restype = POINTER(complex64)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1749
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetThreadCount", "cdecl"):
        continue
    digHoloConfigSetThreadCount = _lib.get("digHoloConfigSetThreadCount", "cdecl")
    digHoloConfigSetThreadCount.argtypes = [c_int, c_int]
    digHoloConfigSetThreadCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1757
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetThreadCount", "cdecl"):
        continue
    digHoloConfigGetThreadCount = _lib.get("digHoloConfigGetThreadCount", "cdecl")
    digHoloConfigGetThreadCount.argtypes = [c_int]
    digHoloConfigGetThreadCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1766
for _lib in _libs.values():
    if not _lib.has("digHoloBenchmarkEstimateThreadCountOptimal", "cdecl"):
        continue
    digHoloBenchmarkEstimateThreadCountOptimal = _lib.get("digHoloBenchmarkEstimateThreadCountOptimal", "cdecl")
    digHoloBenchmarkEstimateThreadCountOptimal.argtypes = [c_int, c_float]
    digHoloBenchmarkEstimateThreadCountOptimal.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1776
for _lib in _libs.values():
    if not _lib.has("digHoloBenchmark", "cdecl"):
        continue
    digHoloBenchmark = _lib.get("digHoloBenchmark", "cdecl")
    digHoloBenchmark.argtypes = [c_int, c_float, POINTER(c_float)]
    digHoloBenchmark.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1808
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetFFTWPlanMode", "cdecl"):
        continue
    digHoloConfigSetFFTWPlanMode = _lib.get("digHoloConfigSetFFTWPlanMode", "cdecl")
    digHoloConfigSetFFTWPlanMode.argtypes = [c_int, c_int]
    digHoloConfigSetFFTWPlanMode.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1818
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetFFTWPlanMode", "cdecl"):
        continue
    digHoloConfigGetFFTWPlanMode = _lib.get("digHoloConfigGetFFTWPlanMode", "cdecl")
    digHoloConfigGetFFTWPlanMode.argtypes = [c_int]
    digHoloConfigGetFFTWPlanMode.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1825
for _lib in _libs.values():
    if not _lib.has("digHoloFFTWWisdomForget", "cdecl"):
        continue
    digHoloFFTWWisdomForget = _lib.get("digHoloFFTWWisdomForget", "cdecl")
    digHoloFFTWWisdomForget.argtypes = []
    digHoloFFTWWisdomForget.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1835
for _lib in _libs.values():
    if not _lib.has("digHoloFFTWWisdomFilename", "cdecl"):
        continue
    digHoloFFTWWisdomFilename = _lib.get("digHoloFFTWWisdomFilename", "cdecl")
    digHoloFFTWWisdomFilename.argtypes = [String]
    digHoloFFTWWisdomFilename.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1883
for _lib in _libs.values():
    if not _lib.has("digHoloGetViewport", "cdecl"):
        continue
    digHoloGetViewport = _lib.get("digHoloGetViewport", "cdecl")
    digHoloGetViewport.argtypes = [c_int, c_int, c_int, POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_char))]
    digHoloGetViewport.restype = POINTER(c_ubyte)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1897
for _lib in _libs.values():
    if not _lib.has("digHoloGetViewportToFile", "cdecl"):
        continue
    digHoloGetViewportToFile = _lib.get("digHoloGetViewportToFile", "cdecl")
    digHoloGetViewportToFile.argtypes = [c_int, c_int, c_int, POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_char)), String]
    digHoloGetViewportToFile.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1924
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetVerbosity", "cdecl"):
        continue
    digHoloConfigSetVerbosity = _lib.get("digHoloConfigSetVerbosity", "cdecl")
    digHoloConfigSetVerbosity.argtypes = [c_int, c_int]
    digHoloConfigSetVerbosity.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1937
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetVerbosity", "cdecl"):
        continue
    digHoloConfigGetVerbosity = _lib.get("digHoloConfigGetVerbosity", "cdecl")
    digHoloConfigGetVerbosity.argtypes = [c_int]
    digHoloConfigGetVerbosity.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1945
for _lib in _libs.values():
    if not _lib.has("digHoloConsoleRedirectToFile", "cdecl"):
        continue
    digHoloConsoleRedirectToFile = _lib.get("digHoloConsoleRedirectToFile", "cdecl")
    digHoloConsoleRedirectToFile.argtypes = [String]
    digHoloConsoleRedirectToFile.restype = c_int
    break
